# log-platform

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.zh-CN.md  README_INDEX_CONFIG.md  api_tests.rest  config.yml
.cursor/rules/: project-structure.mdc  testing-strategy.mdc
docker/: .dockerignore  Dockerfile  config.docker.yml  docker-compose.yml
examples/: push_knowledge_example.json  segment_ids_example.json  update_knowledge_example.json
fixtures/: migrate_and_status.sh  seed_agent_logs_v1.sh
scripts/: build-runtime-image.sh  deploy-runtime-container.sh
spec/: quickwit-index-update-biz_type.md
specs/: knowledge_fulltext_search.md  knowledge_fulltext_search_development_tasks.md  mysql_table.sql  quickwit_source_analysis.md  rust-new-api-requirements.md
src/: lib.rs  main.rs
src/api/: agent_logs.rs  docs.rs  knowledge_logs.rs  mod.rs  record_common_logs.rs  routes.rs
src/config/: mod.rs
src/index_define/: agent_index_define.rs  knowledge_index_define.rs  mod.rs  record_common_index_define.rs
src/macros/: mod.rs
src/middlewares/: mark_log_span.rs  mod.rs  request_id.rs  request_logger.rs  server_time.rs
src/migration/: agent_log_migration.rs  mod.rs
src/models/: agent_logs_model.rs  app_state_model.rs  http_result.rs  knowledge_logs_model.rs  mod.rs  page_query_model.rs  record_common_log.rs
src/my_error/: mod.rs
src/services/: agent_log_quickwit.rs  knowledge_quickwit.rs  mod.rs  record_common_quickwit.rs
src/storage/: mod.rs  redb_storage.rs  redb_storage_backup.rs  (+1 more)
(+7 files in other folders)
