[package]
name = "log_platform"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "log_platform"
path = "src/lib.rs"

[[bin]]
name = "log_platform"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = [
    "http2",
    "query",
    "tracing",
    "ws",
    "multipart",
    "macros",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redb = "3.1"
serde_yaml = "=0.9.33"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "=0.2.2"
log = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
once_cell = "1.21.3"
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
env_logger = "0.11"
